--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.17.2",
     "@astrojs/tailwind": "^4.0.0",
-    "astro": "^2.7.1",
-    "tailwindcss": "^3.3.2"
+    "astro": "^2.7.4",
+    "sharp": "^0.32.1",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.6"
   }
 }
